--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,7 +2,7 @@ name: Build & Publish API Docs
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
     paths:
       - 'openapi.yaml'
       - 'docs/**'
